# generate-ssm-parameters

./: .gitignore  README.md  build-commands.txt  generate_ssm_parameters.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  ssm-parameter-generator-input.csv
generate_ssm_parameters/: gen_ssm_params.py
src/generate-ssm-parameters/: generate_ssm_parameters.py
