[metadata]
name = generate-ssm-parameters
version = 0.0.4
description = 'A script for creating AWS SSM Parameters in bulk from a CSV file.'
url = https://github.com/travers-co/generate-ssm-parameters
author = Travers
author_email = travers@curiousorbit.com
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = Bug Tracker = https://github.com/travers-co/generate-ssm-parameters/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3~=1.24.89
    botocore~=1.27.89
    click~=8.1.3
    pandas~=1.5.2
    tqdm~=4.64.1

[options.entry_points]
console_scripts =
    generate-ssm-parameters = generate_ssm_parameters:cli

[options.packages.find]
where = src