[metadata]
name = generate-ssm-parameters
version = 0.0.9
description = 'A script for creating AWS SSM Parameters in bulk from a CSV file.'
url = https://github.com/travers-co/generate-ssm-parameters
author = Travers
author_email = travers@curiousorbit.com
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = Bug Tracker = https://github.com/travers-co/generate-ssm-parameters/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
requires_python = >=3.8
install_requires =
    boto3
    botocore
    click
    pandas
    tqdm

[options.entry_points]
console_scripts =
    generate-ssm-parameters = generate_ssm_parameters:cli

[options.packages.find]
where = src